objects/Assesment__c.object
<CustomObject>
    <fields>
        <fullName>RSC_Change_Emotion_Control__c</fullName>
        <description>Indicator of change for Emotion Control</description>
        <label>RSC Change Emotion Control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Empathy__c</fullName>
        <description>Indicator of change for Empathy</description>
        <label>RSC Change Empathy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Learning_Interest__c</fullName>
        <description>Indicator of change for Learning Interest</description>
        <label>RSC Change Learning Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Optimism__c</fullName>
        <description>Indicator of change for Optimism</description>
        <label>RSC Change Optimism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Peers__c</fullName>
        <description>Indicator of change for Peers</description>
        <label>RSC Change Peers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Perseverance__c</fullName>
        <description>Indicator of change for Perseverance</description>
        <label>RSC Change Perseverance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Reflection__c</fullName>
        <description>Indicator of change for Reflection</description>
        <label>RSC Change Reflection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_School_Bonding__c</fullName>
        <description>Indicator of change for School Bonding</description>
        <label>RSC Change School Bonding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Change_Trust__c</fullName>
        <description>Indicator of change for Trust</description>
        <label>RSC Change Trust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>-1: Negative change</fullName>
                    <isActive>false</isActive>
                    <label>-1: Negative change</label>
                </value>
                <value>
                    <fullName>0: No change</fullName>
                    <isActive>false</isActive>
                    <label>0: No change</label>
                </value>
                <value>
                    <fullName>1: Positive change</fullName>
                    <isActive>false</isActive>
                    <label>1: Positive change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Academic_Motivation__c</fullName>
        <description>RSC Percentile rank for scale of Academic motivation</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC GrowthPercentile Academic Motivation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Action_Orientation__c</fullName>
        <description>RSC Percentile rank for scale of Action orientation</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Action Orientation</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Adults__c</fullName>
        <description>RSC Percentile rank for scale of Relationships with adults</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Adults</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Assertiveness__c</fullName>
        <description>RSC Percentile rank for scale of Assertiveness</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Assertiveness</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Critical_Thinking__c</fullName>
        <description>RSC Percentile rank for scale of Critical thinking</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Critical Thinking</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Emotion_control__c</fullName>
        <description>RSC Percentile rank for scale of Emotion control</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Emotion control</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Empathy__c</fullName>
        <description>RSC Percentile rank for scale of Empathy</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Empathy</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Learning_Interest__c</fullName>
        <description>RSC Percentile rank for scale of Learning interest</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Learning Interest</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Optimism__c</fullName>
        <description>RSC Percentile rank for scale of Optimism</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Optimism</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Peers__c</fullName>
        <description>RSC Percentile rank for scale of Relationships with peers</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Peers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Perseverance__c</fullName>
        <description>RSC Percentile rank for scale of Perseverance</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Perseverance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Reflection__c</fullName>
        <description>RSC Percentile rank for scale of Reflection</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Reflection</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_School_Bonding__c</fullName>
        <description>RSC Percentile rank for scale of School bonding</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile School Bonding</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_GrowthPercentile_Trust__c</fullName>
        <description>RSC Percentile rank for scale of Trust</description>
        <inlineHelpText>Integer from 1-99</inlineHelpText>
        <label>RSC Growth Percentile Trust</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Academic_Motivation__c</fullName>
        <description>Mean of Academic Motivation on the RSC</description>
        <label>RSC Mean Academic Motivation</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Action_Orientation__c</fullName>
        <description>Mean of Action Orientation on the RSC</description>
        <label>RSC Mean Action Orientation</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Adults__c</fullName>
        <description>Mean of Adults on the RSC</description>
        <label>RSC Mean Adults</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Assertiveness__c</fullName>
        <description>Mean of Assertiveness on the RSC</description>
        <label>RSC Mean Assertiveness</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Critical_Thinking__c</fullName>
        <description>Mean of Critical Thinking on the RSC</description>
        <label>RSC Mean Critical Thinking</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Emotion_Control__c</fullName>
        <description>Mean of Emotion Control on the RSC</description>
        <label>RSC Mean Emotion Control</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Empathy__c</fullName>
        <description>Mean of Empathy on the RSC</description>
        <label>RSC Mean Empathy</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Learning_Interest__c</fullName>
        <description>Mean of Learning Interest on the RSC</description>
        <label>RSC Mean Learning Interest</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Optimism__c</fullName>
        <description>Mean of Optimism on the RSC</description>
        <label>RSC Mean Optimism</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Peers__c</fullName>
        <description>Mean of Peers on the RSC</description>
        <label>RSC Mean Peers</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Perseverance__c</fullName>
        <description>Mean of Perseverance on the RSC</description>
        <label>RSC Mean Perseverance</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Reflection__c</fullName>
        <description>Mean of Reflection on the RSC</description>
        <label>RSC Mean Reflection</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_School_Bonding__c</fullName>
        <description>Mean of School Bonding on the RSC</description>
        <label>RSC Mean School Bonding</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Mean_Trust__c</fullName>
        <description>Mean of Trust on the RSC</description>
        <label>RSC Mean Trust</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rater_Name__c</fullName>
        <label>Rater Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_ID__c</fullName>
        <label>Rating ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Score_Target__c</fullName>
        <description>summary of student mastery of the items on the test</description>
        <label>Raw Score Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Raw_Score__c</fullName>
        <inlineHelpText>summary of student mastery of the items on the test</inlineHelpText>
        <label>Raw Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reading_Percent_Correct__c</fullName>
        <label>Reading Percent Correct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Form__c</fullName>
        <label>Record Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DESSA</fullName>
                </value>
                <value>
                    <fullName>DESSA-mini Form 1</fullName>
                </value>
                <value>
                    <fullName>DESSA-mini Form 2</fullName>
                </value>
                <value>
                    <fullName>DESSA-mini Form 3</fullName>
                </value>
                <value>
                    <fullName>DESSA-mini Form 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recorded_By__c</fullName>
        <label>Recorded By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reflection__c</fullName>
        <label>Reflection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reflection_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Reflection z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Skills_Description__c</fullName>
        <label>Relationship Skills Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Skills_Percentile__c</fullName>
        <label>Relationship Skills Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Skills_Raw_Score__c</fullName>
        <label>Relationship Skills Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Skills_T_Score__c</fullName>
        <label>Relationship Skills T-Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationships_with_adults__c</fullName>
        <label>Relationships with adults</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationships_with_adults_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Relationships with adults z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationships_with_peers__c</fullName>
        <label>Relationships with peers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationships_with_peers_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>Relationships with peers z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEL_Composite_Description__c</fullName>
        <label>SEL Composite Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEL_Composite_Percentile__c</fullName>
        <label>SEL Composite Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEL_Composite_Raw_Score__c</fullName>
        <label>SEL Composite Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEL_Composite_T_Score__c</fullName>
        <label>SEL Composite T-Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAR_GLE_Student_Target_Score__c</fullName>
        <label>STAR GLE Student Target Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAR_Grade_Level_Equivalent_Score__c</fullName>
        <label>STAR Grade Level Equivalent Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scale_Score__c</fullName>
        <label>Scale Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Student__r.School__r.Name</formula>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_bonding__c</fullName>
        <label>School bonding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Challenge</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Strength</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_bonding_z_score__c</fullName>
        <inlineHelpText>Signed numbers, largely from -3.000 to +3.000</inlineHelpText>
        <label>School bonding z-score</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Awareness_Description__c</fullName>
        <label>Self-Awareness Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Awareness_Percentile__c</fullName>
        <label>Self-Awareness Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Awareness_Raw_Score__c</fullName>
        <label>Self-Awareness Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Awareness_T_Score__c</fullName>
        <label>Self-Awareness T-Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Management_Description__c</fullName>
        <label>Self-Management Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Management_Percentile__c</fullName>
        <label>Self-Management Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Management_Raw_Score__c</fullName>
        <label>Self-Management Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Management_T_Score__c</fullName>
        <label>Self-Management T-Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_On_Report_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Report Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_On_Transcript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Transcript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Awareness_Description__c</fullName>
        <label>Social Awareness Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Awareness_Percentile__c</fullName>
        <label>Social Awareness Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Awareness_Raw_Score__c</fullName>
        <label>Social Awareness Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Awareness_T_Score__c</fullName>
        <label>Social Awareness T-Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_DESSA_ID__c</fullName>
        <label>Student DESSA ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_DOB__c</fullName>
        <formula>Student__r.Date_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_First_Name__c</fullName>
        <formula>Student__r.Student_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Gender__c</fullName>
        <formula>TEXT(Student__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Grade__c</fullName>
        <formula>TEXT(Student__r.Grade__c)</formula>
        <label>Student Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Growth_Percentile_Target_Score__c</fullName>
        <label>Student Growth Percentile Target Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Growth_Percentile__c</fullName>
        <label>Student Growth Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <label>Student_Id</label>
        <type>TextArea</type>
    </fields>
</CustomObject>